[package]
name = "wiseye_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
reqwest = "0.12.2"
tokio = "1.37.0"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
libc = "0.2.153"
nix = "0.28.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "mysql"] }